refactor: Corrigindo a logica do atualizar nome do produto e o listar